--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col">
-                <button type="button" class="btn btn-dark btn-large" href="https://">Download My CV</button>
+                <button type="button" class="btn btn-dark btn-large" href="https://emmykim149.github.io/Emily's CV.pdf">Download My CV</button>
                 <h1>Contact Me</h1>
                 <p>kimz.emmy@gmail.com</p>
             </div>
