--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
 <!--                <button type="button" class="btn btn-dark btn-large">Let's meet</button>-->
+                <button type="button" class="btn btn-dark btn-large" href="https://emmykim149.github.io/Emily's CV.pdf">Download My CV</button>
+
             </div>
         </div>
     </div>
@@ -198,7 +200,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col">
-                <button type="button" class="btn btn-dark btn-large" href="https://emmykim149.github.io/Emily's CV.pdf">Download My CV</button>
+<!--                <button type="button" class="btn btn-dark btn-large" href="https://emmykim149.github.io/Emily's CV.pdf">Download My CV</button>-->
                 <h1>Contact Me</h1>
                 <p>kimz.emmy@gmail.com</p>
             </div>
