--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
 <!--                <button type="button" class="btn btn-dark btn-large">Let's meet</button>-->
 <!--                <button type="button" class="btn btn-dark btn-large" <a href="https://emmykim149.github.io/Emily's CV.pdf">Download my CV</button>-->
-                <button>
+                <button type="button" class="btn btn-blue btn-large">
                 <a href="https://emmykim149.github.io/Emily's CV.pdf">Download my CV</a>
                 </button>
             </div>
