--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#about-me">About Me</a>
+                    <a class="nav-link" href="#about-me">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#projects">My CV</a>
@@ -96,9 +96,9 @@
                 <img src="./about-us.jpg" class="img-fluid" alt="About Me">
             </div>
             <div class="col text-col">
-                <h1>About Me</h1>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
+                <h1>About</h1>
+                <p>Emily Kimani is a hands-on recent graduate Electrical Engineer in the construction industry as well as the ICT Industry. She is a fast willing learner with the capacity and intellect to solve problems and proactively make decisions. She has a huge sense of urgency, which is adopted by all who work with her. She has the ability to control and lead teams in the industry of professionals (architects, engineers, software developers.) to achieve the impossible.</p>
+                <p>She is a diligent, self-driven and result oriented individual who is keen on details and hard working in activities she engages in and is ardent to achieve all deadlines. Her understanding of construction allows her to interact with all activities on site and to actively engage with individuals at all levels in a company.</p>
 <!--                <button type="button" class="btn btn-dark btn-large">Let's meet</button>-->
             </div>
         </div>
