--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col">
                 <h1>Software<br>Education</h1>
-                <p>I have undertaken a 30-day JavaScript course. This course has given alot of insights on JavaScript, HTML and CSS.</p>
+                <p>I have undertaken a 30-day JavaScript course. This course has given me alot of insights on JavaScript, HTML and CSS.</p>
 <!--                <button type="button" class="btn btn-dark btn-large">Learn more</button>-->
             </div>
             <div class="col img-col">
@@ -76,7 +76,7 @@
             <div class="col-md-4 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
                     <div class="card-body">
-                        <img src="./icon3.jpg" class="icon" alt="Service Three"/>
+                        <img src="./icon3.jpeg" class="icon" alt="Service Three"/>
                         <h5 class="card-title">JavaScript</h5>
                         <p class="card-text">I have an indepth undertanding of essential concepts of JS, arrays, functions, types and conditionals.</p>
                     </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="col text-col">
                 <h1>About</h1>
-                <p>Emily Kimani is a hands-on recent graduate Electrical Engineer in the construction industry as well as the ICT Industry. She is a fast willing learner with the capacity and intellect to solve problems and proactively make decisions. She has a huge sense of urgency, which is adopted by all who work with her. She has the ability to control and lead teams in the industry of professionals (architects, engineers, software developers.) to achieve the impossible.</p>
+                <p>Emily Kimani is a hands-on recent graduate Electrical Engineer in the construction industry as well as the ICT Industry. She is a fast willing learner with the capacity and intellect to solve problems and proactively make decisions. She has a huge sense of urgency, which is adopted by all who work with her. She has the ability to control and lead teams in the industry of professionals (architects, engineers, software developers) to achieve the impossible.</p>
                 <p>She is a diligent, self-driven and result oriented individual who is keen on details and hard working in activities she engages in and is ardent to achieve all deadlines. Her understanding of construction allows her to interact with all activities on site and to actively engage with individuals at all levels in a company.</p>
 <!--                <button type="button" class="btn btn-dark btn-large">Let's meet</button>-->
             </div>
